gap fix

--- a/assets/frontend/css/xpoge.css
+++ b/assets/frontend/css/xpoge.css
@@ -1114,7 +1114,7 @@ input.radio-button:checked+label::before {
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
 	-o-border-radius: 0px;
-	background-color: rgb(251 250 250)
+	background-color: rgb(233 233 233);
 }
 
 .nl-popup-inner {
@@ -1332,19 +1332,18 @@ input.radio-button:checked+label::before {
 // HEADER  //----------------------------
 _______________________________________________________*/
 header {
-	background: #fff;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	padding: 21px 0;
-	transition: all 0.25s ease 0s;
-	-moz-transition: all 0.25s ease 0s;
-	-webkit-transition: all 0.25s ease 0s;
-	-o-transition: all 0.25s ease 0s;
-	z-index: 99999999;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 21px 0;
+    transition: all 0.25s ease 0s;
+    -moz-transition: all 0.25s ease 0s;
+    -webkit-transition: all 0.25s ease 0s;
+    -o-transition: all 0.25s ease 0s;
+    z-index: 999;
 }
-
 header.header-fixed {
 	padding: 10px 0;
 	-webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
@@ -4712,4 +4711,12 @@ footer.footer-part .container .footer-top.ptb-100 .mb_-30 .row .col-12.col-lg-3.
 .position-r.mb-5 {
     margin-bottom: 0px !important;
 }
+}
+
+.pb-100 {
+    padding-bottom: 52px !important;
+}
+
+.position-r.mb-5 {
+    margin-bottom: 9px !important;
 }
